crates/nidus/tests/ui/controller_empty_param_path.rs
use nidus::prelude::*;

#[controller("/:")]
struct UsersController;

fn main() {}
